[kyo-stats-machine] make the classpath contract true
Part of re-landing #1906 (reverted in #1914), split out as the half that stands
on its own. The generic FFI release is the other half; this PR does not depend on
it and the two can land in either order.

## Problem

kyo-stats-machine promises that putting it on the classpath makes `machine.*`
metrics appear. Two things in this half made that false:

- Nothing in kyo-core ever touched `kyo.Stat`, so the service-loader scan
  hanging off its class initializer never ran. A process that never mentioned a
  metric got no sampler at all.
- Reading a metric you do not own was impossible. The accessors are
  first-writer-wins, so a reader calling `gauge(path)(...)` registered its own
  thunk and shadowed the producer's value.

## Solution

`Stat.activate()` runs provider activation once, called from
`KyoAppRunner.runInitCode`. Not on the fiber-creation path: that is the only hook
broad enough to cover every process, but it is the scheduler's hot path, so a
host that is not a `KyoApp` calls it itself.

`StatsRegistry` gains lookup-only `find*` and `snapshot(prefix*)`, with
`Stat.findCounter`, `findGauge` and `findHistogram` as the safe-tier equivalents
answering `Maybe` in `< Sync`, so a reader no longer shadows the producer.
`MachineMetrics` names the taxonomy as constants.

Three smaller fixes ride along: `Machine.degradable` now covers `LinkageError`,
so a missing native degrades one reader instead of killing the sampler;
`KYO_MACHINE_INTERVAL_MS` sets the sample cadence, which was hard-wired to one
second; and `machine.cpu.cores` on JS reads Node's own count rather than
Scala.js's stubbed `availableProcessors`, which always answered 1.

## Notes

The third thing that made the contract false is not fixed here: the macOS reader
is a Mach-only C shim that compiles anywhere, so the release published a Linux
artifact for a binding no Linux process loads and no darwin artifact at all.
That is a release-machinery bug and is f